k8s/infra/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fishapp-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: fishapp-external-address # terraformで作成
spec:
  rules:
  - http:
      paths:
      - path: /query
        backend:
          serviceName: api-gateway
          servicePort: 8080
      - path: /playground
        backend:
          serviceName: api-gateway
          servicePort: 8080
